--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <div class="container">
+        <h1 class="welcome-text">Добро пожаловать в Memory Game!</h1>
         <div class="game-info">
             <span class="attempts">Попыток: <span id="attempts">0</span></span>
-            <button id="shareButton" class="share-button">Поделиться результатом</button>
+            <div class="buttons">
+                <button id="restartButton" class="game-button">Играть еще раз</button>
+                <button id="shareButton" class="game-button share-button">Поделиться результатом</button>
+            </div>
         </div>
         <div class="memory-game" id="gameBoard"></div>
     </div>
