--- a/index.html
+++ b/index.html
@@ -9,15 +9,38 @@
 </head>
 <body>
     <div class="container">
+        <div class="admin-section">
+            <button id="adminButton" class="admin-button">Админ</button>
+        </div>
         <h1 class="welcome-text">Добро пожаловать в Memory Game!</h1>
         <div class="game-info">
             <span class="attempts">Попыток: <span id="attempts">0</span></span>
             <div class="buttons">
                 <button id="restartButton" class="game-button">Играть еще раз</button>
-                <button id="shareButton" class="game-button share-button">Поделиться результатом</button>
             </div>
         </div>
         <div class="memory-game" id="gameBoard"></div>
+    </div>
+
+    <!-- Модальное окно для авторизации -->
+    <div id="adminModal" class="modal">
+        <div class="modal-content">
+            <h2>Авторизация</h2>
+            <form id="adminForm">
+                <div class="form-group">
+                    <label for="login">Логин:</label>
+                    <input type="text" id="login" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Пароль:</label>
+                    <input type="password" id="password" required>
+                </div>
+                <div class="form-buttons">
+                    <button type="submit" class="modal-button">Войти</button>
+                    <button type="button" class="modal-button" id="closeModal">Отмена</button>
+                </div>
+            </form>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
